# Cortex

./: CMakeLists.txt  README.md
data/rootfs/: arc.mar
src/: main.cpp
src/commands/: Cat.cpp  Cd.cpp  Chmod.cpp  Clear.cpp  Cp.cpp  Echo.cpp  EnvCmd.cpp  Find.cpp  Grep.cpp  Head.cpp  Help.cpp  Helpers.hpp  Ls.cpp  Mkdir.cpp  Mv.cpp  Pack.cpp  Pkg.cpp  Pwd.cpp  Rm.cpp  SetCmd.cpp  Stat.cpp  Tail.cpp  Test.cpp  Touch.cpp  Unpack.cpp  UnsetCmd.cpp  Version.cpp
src/core/: Environment.cpp  Environment.hpp  Interrupt.cpp  Interrupt.hpp
src/pkg/: PackageManager.cpp  PackageManager.hpp
src/shell/: CommandContext.hpp  CommandRegistry.cpp  CommandRegistry.hpp  ICommand.hpp  Parser.cpp  Parser.hpp  Shell.cpp  Shell.hpp
src/util/: ExecDb.cpp  ExecDb.hpp
src/vfs/: FolderVfs.cpp  FolderVfs.hpp  IVfs.hpp
